Fix for the phone being too small

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -75,8 +75,8 @@ select#control-format {
 	padding-top: 3%;
 	padding-bottom: 3%;
 
-	// This was causing horizontal scrolling on smaller screens
-	min-width: unset;
+	// Fix for horizontal scrolling on smaller screens
+	min-width: 100%;
 
 	iframe {
 		padding: 0 12%;
